--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "pytest (>=8.4.1,<9.0.0)",
     "pytest-asyncio (>=1.0.0,<2.0.0)",
     "httpx (>=0.28.1,<0.29.0)",
+    "psycopg2-binary (>=2.9.10,<3.0.0)",
 ]
 
 [build-system]
