--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -32,6 +32,8 @@ ruff = "^0.11.12"
 black = "^25.1.0"
 alembic = "^1.16.2"
 aiosqlite = "^0.21.0"
+pytest = "^8.4.2"
+pytest-asyncio = "^1.2.0"
 
 [tool.black]
 line-length = 100
