--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   # State Management
   flutter_riverpod: ^2.4.9
 
+  # HTTP Client
+  dio: ^5.4.0
+
   # Environment Variables
   flutter_dotenv: ^5.1.0
 
@@ -30,12 +33,3 @@ flutter:
 
   assets:
     - .env
-
-  fonts:
-    - family: Prompt
-      fonts:
-        - asset: assets/fonts/Prompt/Prompt-Light.ttf
-        - asset: assets/fonts/Prompt/Prompt-Regular.ttf
-        - asset: assets/fonts/Prompt/Prompt-Medium.ttf
-        - asset: assets/fonts/Prompt/Prompt-SemiBold.ttf
-        - asset: assets/fonts/Prompt/Prompt-Bold.ttf
