Refactor models to use Any type for location fields; add comprehensive tests for authentication, user, gig, and chat functionalities; implement database integration tests; update Docker configuration for PostGIS support.

--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -2,7 +2,7 @@ name: chayenity
 
 services:
   db_pg:
-    image: postgres:15
+    image: postgis/postgis:15-3.4
     container_name: chayenity-pg
     restart: always
     environment:
