refactor: update project name and identifiers from Chayenity to Hourz

--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -1,5 +1,5 @@
-name: chayenity
-description: 'Chayenity Marketplace'
+name: hourz
+description: 'Hourz Marketplace'
 publish_to: 'none'
 version: 0.1.0
 
