--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "httpx (>=0.28.1,<0.29.0)",
     "psycopg2-binary (>=2.9.10,<3.0.0)",
     "requests (>=2.32.5,<3.0.0)",
+    "pillow (>=10.0.0,<11.0.0)",
 ]
 
 [build-system]
