--- a/mobile/.gitignore
+++ b/mobile/.gitignore
@@ -33,6 +33,10 @@ migrate_working_dir/
 .pub/
 /build/
 
+# Code Generation (Freezed & JSON)
+**/*.freezed.dart
+**/*.g.dart
+
 # Symbolication related
 app.*.symbols
 
