--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -18,15 +18,27 @@ dependencies:
   # HTTP Client
   dio: ^5.4.0
 
+  # Routing
+  go_router: ^14.2.7
+
   # Environment Variables
   flutter_dotenv: ^5.1.0
 
   logger: ^2.6.1
 
+  # Immutable Data Classes
+  freezed_annotation: ^2.4.4
+  json_annotation: ^4.9.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+
+  # Code Generation
+  build_runner: ^2.4.7
+  freezed: ^2.5.8
+  json_serializable: ^6.9.5
 
 flutter:
   uses-material-design: true
