--- a/server/.env.example
+++ b/server/.env.example
@@ -1,5 +1,5 @@
 ENVIRONMENT=local
-PROJECT_NAME=chayenity
+PROJECT_NAME=hourz
 
 API_STR=/api
 
@@ -10,6 +10,6 @@ ACCESS_TOKEN_EXPIRE=10080
 FRONTEND_URL=http://localhost:3000
 BACKEND_URL=http://localhost:8000
 
-POSTGRES_DB=chayenity
+POSTGRES_DB=hourz
 POSTGRES_USER=admin
 POSTGRES_PASSWORD=secret
