--- a/server/.env.example
+++ b/server/.env.example
@@ -3,13 +3,16 @@ PROJECT_NAME=hourz
 
 API_STR=/api
 
-SECRET_KEY=secret_key
+REFRESH_SECRET_KEY=refresh_secret_key
+ACCESS_SECRET_KEY=access_secret_key
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE=10080
 
 FRONTEND_URL=http://localhost:3000
 BACKEND_URL=http://localhost:8000
 
+POSTGRES_SERVER=localhost
+POSTGRES_PORT=5432
 POSTGRES_DB=hourz
 POSTGRES_USER=admin
 POSTGRES_PASSWORD=secret
