--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "psycopg2-binary (>=2.9.10,<3.0.0)",
     "requests (>=2.32.5,<3.0.0)",
     "pillow (>=10.0.0,<11.0.0)",
+    "geoalchemy2 (>=0.18.0,<0.19.0)",
 ]
 
 [build-system]
