feat(security): implement token rotation and session management to enhance authentication security

--- a/partCI_CD/main/Jenkinsfile
+++ b/partCI_CD/main/Jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
     stages {
         stage('Checkout') {
             steps {
-                git branch: 'feat/srv/buddy-system', url: 'https://github.com/CHAYENITY/chayenity.git'
+                git branch: 'feat/srv/buddy-system', url: 'https://github.com/CHAYENITY/hourz.git'
             }
         }
 
