--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "requests (>=2.32.5,<3.0.0)",
     "pillow (>=10.0.0,<11.0.0)",
     "geoalchemy2 (>=0.18.0,<0.19.0)",
+    "pysonar (>=1.2.0.2419,<2.0.0.0)",
 ]
 
 [build-system]
