feat: Implement file upload system with FastAPI
- Added Dockerfile for server setup with upload directories and dependencies.
- Created file management routes for uploading, serving, and managing files.
- Removed old upload routes and integrated file management into a new file_route.py.
- Updated API router to include new file management routes.
- Modified user schema to support optional fields for two-step registration.
- Added comprehensive integration tests for user registration and file upload flow.
- Updated docker-compose.yml to persist uploaded files and set environment variables.
- Enhanced requirements.txt with additional dependencies for JWT and password hashing.

--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,6 +1,29 @@
 name: hourz
 
 services:
+  app:
+    container_name: hourz-server
+    build: .
+    restart: always
+    ports:
+      - "8000:8000"
+    volumes:
+      # Persist uploaded files
+      - uploads_data:/app/uploads
+    environment:
+      - POSTGRES_SERVER=db_pg
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - REFRESH_SECRET_KEY=${REFRESH_SECRET_KEY}
+      - ACCESS_SECRET_KEY=${ACCESS_SECRET_KEY}
+      - FRONTEND_URL=${FRONTEND_URL}
+      - BACKEND_URL=${BACKEND_URL}
+    depends_on:
+      - db_pg
+    networks:
+      - app_network
+
   db_pg:
     container_name: hourz-pg
     image: postgis/postgis:15-3.4
@@ -18,13 +41,14 @@ services:
       interval: 30s
       timeout: 5s
       retries: 3
-    # volumes:
-    #   - postgres_data:/var/lib/postgresql/data
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
     networks:
       - app_network
 
-# volumes:
-#   postgres_data:
+volumes:
+  postgres_data:
+  uploads_data:
 
 networks:
   app_network:
