--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   # Image Picker
   image_picker: ^1.0.4
 
+  # Secure Storage
+  flutter_secure_storage: ^9.2.2
+
   # Location Services
   location: ^5.0.3
   lucide_icons: ^0.257.0
