--- a/infra/main/Jenkinsfile
+++ b/infra/main/Jenkinsfile
@@ -178,10 +178,9 @@ except Exception as e:
             }
         }
 
-                                    // ===== DEPLOYMENT STAGES (COMMENTED OUT) =====
-                                    // Uncomment these stages when you want to enable deployment
-                                    
-                                    /*
+                                    // ===== DEPLOYMENT STAGES =====
+                                    // Uncomment or enable these stages when you want to run automated deployment
+
                                     stage('Build Docker Image') {
                                         steps {
                                             dir('server') {
@@ -218,22 +217,47 @@ except Exception as e:
                                     stage('Push to Registry') {
                                         steps {
                                             dir('server') {
-                                                withCredentials([usernamePassword(
-                                                    credentialsId: 'dockerhub-cred',
-                                                    usernameVariable: 'DOCKER_USER',
-                                                    passwordVariable: 'DOCKER_PASS'
+                                                withCredentials([string(
+                                                    credentialsId: 'dockerhub-token',
+                                                    variable: 'DOCKER_TOKEN'
                                                 )]) {
                                                     sh '''
                                                     echo "===== Pushing to Docker Registry ====="
-                                                    echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
+                                                    
+                                                    # Set your Docker Hub username here
+                                                    DOCKER_USER="your-docker-username"
+                                                    
+                                                    # Login using personal access token
+                                                    echo "$DOCKER_TOKEN" | docker login -u "$DOCKER_USER" --password-stdin
+                                                    
+                                                    # Create immutable tags (BUILD_NUMBER + git commit SHA)
+                                                    IMAGE_TAG=${BUILD_NUMBER:-latest}
+                                                    GIT_SHA=$(git rev-parse --short=8 HEAD 2>/dev/null || echo "unknown")
+                                                    
+                                                    # Tag with build number
+                                                    docker tag chayenity-server:latest $DOCKER_USER/chayenity-server:${IMAGE_TAG}
+                                                    docker push $DOCKER_USER/chayenity-server:${IMAGE_TAG}
+                                                    
+                                                    # Tag with git commit SHA
+                                                    docker tag chayenity-server:latest $DOCKER_USER/chayenity-server:${GIT_SHA}
+                                                    docker push $DOCKER_USER/chayenity-server:${GIT_SHA}
+                                                    
+                                                    # Also push latest tag
                                                     docker tag chayenity-server:latest $DOCKER_USER/chayenity-server:latest
                                                     docker push $DOCKER_USER/chayenity-server:latest
+                                                    
+                                                    # Logout for security
+                                                    docker logout
+                                                    
+                                                    echo "✅ Pushed images:"
+                                                    echo "  - $DOCKER_USER/chayenity-server:${IMAGE_TAG}"
+                                                    echo "  - $DOCKER_USER/chayenity-server:${GIT_SHA}"
+                                                    echo "  - $DOCKER_USER/chayenity-server:latest"
                                                     '''
                                                 }
                                             }
                                         }
                                     }
-                                    */
 
     }
 
