--- a/infra/main/Jenkinsfile
+++ b/infra/main/Jenkinsfile
@@ -18,11 +18,17 @@ pipeline {
     }
 
     stages {
+        // Checkout stage is automatic when using "Pipeline script from SCM"
+        // If using "Pipeline script" instead, uncomment the stage below:
+        /*
         stage('Checkout') {
             steps {
-                git branch: 'feat/CI-CD', url: 'https://github.com/CHAYENITY/hourz.git'
+                checkout([$class: 'GitSCM', 
+                          branches: [[name: '*/feat/CI-CD']], 
+                          userRemoteConfigs: [[url: 'https://github.com/CHAYENITY/hourz.git']]])
             }
         }
+        */
 
         stage('Setup Environment (Python)') {
             steps {
@@ -178,87 +184,86 @@ except Exception as e:
             }
         }
 
-                                    // ===== DEPLOYMENT STAGES =====
-                                    // Uncomment or enable these stages when you want to run automated deployment
+        // ===== DEPLOYMENT STAGES =====
+        // Uncomment or enable these stages when you want to run automated deployment
 
-                                    stage('Build Docker Image') {
-                                        steps {
-                                            dir('server') {
-                                                sh '''
-                                                echo "===== Building Docker Image ====="
-                                                docker build -t chayenity-server:latest .
-                                                '''
-                                            }
-                                        }
-                                    }
+        stage('Build Docker Image') {
+            steps {
+                dir('server') {
+                    sh '''
+                    echo "===== Building Docker Image ====="
+                    docker build -t chayenity-server:latest .
+                    '''
+                }
+            }
+        }
 
-                                    stage('Deploy Container') {
-                                        steps {
-                                            dir('server') {
-                                                sh '''
-                                                echo "===== Deploying Container ====="
-                                                docker stop chayenity-server-container || true
-                                                docker rm chayenity-server-container || true
-                                                docker run -d --name chayenity-server-container -p 8000:8000 \
-                                                    -e POSTGRES_SERVER=host.docker.internal \
-                                                    -e POSTGRES_DB=chayenity \
-                                                    -e POSTGRES_USER=postgres \
-                                                    -e POSTGRES_PASSWORD=password \
-                                                    -e REFRESH_SECRET_KEY=production_refresh_secret \
-                                                    -e ACCESS_SECRET_KEY=production_access_secret \
-                                                    -e FRONTEND_URL=http://localhost:3000 \
-                                                    -e BACKEND_URL=http://localhost:8000 \
-                                                    chayenity-server:latest
-                                                '''
-                                            }
-                                        }
-                                    }
+        stage('Deploy Container') {
+            steps {
+                dir('server') {
+                    sh '''
+                    echo "===== Deploying Container ====="
+                    docker stop chayenity-server-container || true
+                    docker rm chayenity-server-container || true
+                    docker run -d --name chayenity-server-container -p 8000:8000 \
+                        -e POSTGRES_SERVER=host.docker.internal \
+                        -e POSTGRES_DB=chayenity \
+                        -e POSTGRES_USER=postgres \
+                        -e POSTGRES_PASSWORD=password \
+                        -e REFRESH_SECRET_KEY=production_refresh_secret \
+                        -e ACCESS_SECRET_KEY=production_access_secret \
+                        -e FRONTEND_URL=http://localhost:3000 \
+                        -e BACKEND_URL=http://localhost:8000 \
+                        chayenity-server:latest
+                    '''
+                }
+            }
+        }
 
-                                    stage('Push to Registry') {
-                                        steps {
-                                            dir('server') {
-                                                withCredentials([string(
-                                                    credentialsId: 'dockerhub-token',
-                                                    variable: 'DOCKER_TOKEN'
-                                                )]) {
-                                                    sh '''
-                                                    echo "===== Pushing to Docker Registry ====="
-                                                    
-                                                    # Set your Docker Hub username here
-                                                    DOCKER_USER="psu6510110357"
-                                                    
-                                                    # Login using personal access token
-                                                    echo "$DOCKER_TOKEN" | docker login -u "$DOCKER_USER" --password-stdin
-                                                    
-                                                    # Create immutable tags (BUILD_NUMBER + git commit SHA)
-                                                    IMAGE_TAG=${BUILD_NUMBER:-latest}
-                                                    GIT_SHA=$(git rev-parse --short=8 HEAD 2>/dev/null || echo "unknown")
-                                                    
-                                                    # Tag with build number
-                                                    docker tag chayenity-server:latest $DOCKER_USER/chayenity-server:${IMAGE_TAG}
-                                                    docker push $DOCKER_USER/chayenity-server:${IMAGE_TAG}
-                                                    
-                                                    # Tag with git commit SHA
-                                                    docker tag chayenity-server:latest $DOCKER_USER/chayenity-server:${GIT_SHA}
-                                                    docker push $DOCKER_USER/chayenity-server:${GIT_SHA}
-                                                    
-                                                    # Also push latest tag
-                                                    docker tag chayenity-server:latest $DOCKER_USER/chayenity-server:latest
-                                                    docker push $DOCKER_USER/chayenity-server:latest
-                                                    
-                                                    # Logout for security
-                                                    docker logout
-                                                    
-                                                    echo "✅ Pushed images:"
-                                                    echo "  - $DOCKER_USER/chayenity-server:${IMAGE_TAG}"
-                                                    echo "  - $DOCKER_USER/chayenity-server:${GIT_SHA}"
-                                                    echo "  - $DOCKER_USER/chayenity-server:latest"
-                                                    '''
-                                                }
-                                            }
-                                        }
-                                    }
-
+        stage('Push to Registry') {
+            steps {
+                dir('server') {
+                    withCredentials([string(
+                        credentialsId: 'dockerhub-token',
+                        variable: 'DOCKER_TOKEN'
+                    )]) {
+                        sh '''
+                        echo "===== Pushing to Docker Registry ====="
+                        
+                        # Set your Docker Hub username here
+                        DOCKER_USER="psu6510110357"
+                        
+                        # Login using personal access token
+                        echo "$DOCKER_TOKEN" | docker login -u "$DOCKER_USER" --password-stdin
+                        
+                        # Create immutable tags (BUILD_NUMBER + git commit SHA)
+                        IMAGE_TAG=${BUILD_NUMBER:-latest}
+                        GIT_SHA=$(git rev-parse --short=8 HEAD 2>/dev/null || echo "unknown")
+                        
+                        # Tag with build number
+                        docker tag chayenity-server:latest $DOCKER_USER/chayenity-server:${IMAGE_TAG}
+                        docker push $DOCKER_USER/chayenity-server:${IMAGE_TAG}
+                        
+                        # Tag with git commit SHA
+                        docker tag chayenity-server:latest $DOCKER_USER/chayenity-server:${GIT_SHA}
+                        docker push $DOCKER_USER/chayenity-server:${GIT_SHA}
+                        
+                        # Also push latest tag
+                        docker tag chayenity-server:latest $DOCKER_USER/chayenity-server:latest
+                        docker push $DOCKER_USER/chayenity-server:latest
+                        
+                        # Logout for security
+                        docker logout
+                        
+                        echo "✅ Pushed images:"
+                        echo "  - $DOCKER_USER/chayenity-server:${IMAGE_TAG}"
+                        echo "  - $DOCKER_USER/chayenity-server:${GIT_SHA}"
+                        echo "  - $DOCKER_USER/chayenity-server:latest"
+                        '''
+                    }
+                }
+            }
+        }
     }
 
     post {
